@@ -1,3 +1,7 @@
+2019-10-21  Jason Merrill  <jason@redhat.com>
+
+	* lock-and-run.sh: Check for process existence rather than timeout.
+
 2019-10-21  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
 
 	* expr.c (expand_expr_real_2): Don't widen constant op1 when expanding
